--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "d3-array": "^3.2.4",
@@ -63,6 +63,7 @@
     "sass": "^1.58.3"
   },
   "overrides": {
+    "axios": "$axios",
     "postcss": "$postcss",
     "svgo": "$svgo"
   }
